# head_first_design_patterns_cpp

./: CMakeLists.txt
chapter_1/: main.cpp
chapter_1/puzzle/: main.cpp
chapter_1/strategy/: main.cpp
chapter_1/strategy/ducks/: duck.hpp  mallard_duck.hpp  rubber_duck.hpp  wooden_duck.hpp
chapter_1/strategy/fly/: fly_behavior.hpp  fly_with_wings.hpp  no_fly.hpp
chapter_1/strategy/quack/: quack.hpp  quack_behavior.hpp  silence.hpp  squeak.hpp
chapter_5/: main.cpp
